changed the homepage url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://abhishekGhosh99.github.io/Movix-Movie-App",
+  "homepage": "https://abhishekGhosh99.github.io/movix-movie-app",
   "name": "movix-movie-app",
   "private": true,
   "version": "0.0.0",
